--- a/master.css
+++ b/master.css
@@ -3,7 +3,9 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   color: #777;
+  margin: 0px 0px 0px 0px;
   font: normal 15px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+  overflow-x: hidden;
 }
 p {
   line-height: 20px;
@@ -254,72 +256,31 @@ nav ul li a {
   display: none;
 }
 /* actual content */
-#hero-image {
-  width: 100%;
-  padding-bottom: 10vh;
+.form {
   display: flex;
-
+  justify-content: center;
+  width: 100%;
   overflow: hidden;
 }
-#hero-image h2 {
-  margin: 180px 0 40px 0;
-}
-.button-1 {
-  display: block;
-  text-align: center;
-  background: #444;
-  border-radius: 3px;
-  color: #fff;
-  width: 180px;
-  height: 50px;
-  font-size: 20px;
-  line-height: 50px;
-  margin: 0 auto;
-}
-.button-1:hover {
-  background-color: #02b8dd;
-  color: #fff;
-}
-/*features */
-#features ul {
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  align-items: center;
-  justify-content: space-around;
-}
-
-#features ul li {
-  width: 300px;
-  padding-top: 140px;
-  padding-left: 5vw;
-  text-align: center;
-}
-@media screen and (max-width: 864px) {
-  #features ul {
-    flex-direction: column;
-  }
-  #features ul li {
+@media screen and (max-width: 850px) {
+  .form {
+    padding-left: 20vw;
     width: 60%;
-    padding-top: 140px;
-    padding-right: 30vw;
-    text-align: center;
+    overflow: hidden;
   }
 }
-#features ul li.feature-1 {
-  background: url("../images/features-icon-1.png") no-repeat top center;
-}
-#features ul li.feature-2 {
-  background: url("../images/features-icon-2.png") no-repeat top center;
-}
-
 /* footer */
-footer {
+.footer {
   display: flex;
   flex-direction: column;
   overflow: hidden;
   background-color: #f8fafa;
   width: 100%;
-
-  justify-content: space-around;
+  padding-left: 30vw;
+  justify-content: space-evenly;
+}
+@media screen and (max-width: 850px) {
+  .footer {
+    padding-left: 15vw;
+  }
 }
