--- a/master.css
+++ b/master.css
@@ -290,8 +290,31 @@ nav ul li a {
     overflow: hidden;
   }
 }
-.spacer {
-  padding-top: 20vh;
+
+.button-1 {
+  display: block;
+  text-align: center;
+  background: lightcoral;
+  border-radius: 15px;
+  color: #fff;
+  width: fit-content;
+  padding-left: 15px;
+  padding-right: 15px;
+  height: 50px;
+  font-size: 20px;
+  line-height: 50px;
+  margin: 0 auto;
+}
+.button-1:hover {
+  background-color: #02b8dd;
+  color: #fff;
+}
+.form {
+  justify-content: space-around;
+}
+.donation {
+  padding-top: 0px;
+  padding-bottom: 30vh;
 }
 /* footer */
 .footer {
@@ -306,5 +329,8 @@ nav ul li a {
 @media screen and (max-width: 850px) {
   .footer {
     padding-left: 15vw;
+  }
+  .form {
+    padding-left: 20px;
   }
 }
